--- a/app/src/main/res/layout/activity_view_order.xml
+++ b/app/src/main/res/layout/activity_view_order.xml
@@ -8,41 +8,57 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#d0d0d0">
+        android:layout_height="60dp"
+        android:background="#BAECF3">
+
 
         <ImageButton
             android:id="@+id/imageView44"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="65dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="homepage"
             android:scaleType="fitXY"
-            android:src="@drawable/house_outline"/>
+            android:src="@drawable/house_outline" />
 
         <ImageButton
-            android:id="@+id/imageView45"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="20dp"
+            android:id="@+id/search"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="search"
             android:scaleType="fitXY"
-            android:src="@drawable/search"/>
+            android:src="@drawable/search" />
 
         <ImageButton
-            android:id="@+id/imageView47"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="20dp"
+            android:id="@+id/Goto_order"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="orderlist"
             android:scaleType="fitXY"
-            android:src="@drawable/check_form"/>
+            android:src="@drawable/check_form" />
 
         <ImageButton
             android:id="@+id/imageView48"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="20dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_above="@id/imageView48"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
             android:scaleType="fitXY"
-            android:src="@drawable/user"/>
+            android:src="@drawable/user" />
+
+
     </LinearLayout>
+
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -234,13 +250,6 @@
                         android:background="@drawable/radius"
                         android:text="回訂單" />
 
-                    <Button
-                        android:id="@+id/button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/radius"
-                        android:text="確認" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
