--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:background="#BAECF3">
 
 
@@ -20,6 +20,7 @@
             android:layout_marginLeft="65dp"
             android:layout_marginTop="5dp"
             android:background="#BAECF3"
+            android:onClick="homepage"
             android:scaleType="fitXY"
             android:src="@drawable/house_outline" />
 
@@ -63,7 +64,7 @@
     <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="55dp">
+        android:layout_marginTop="60dp">
 
 
         <LinearLayout
