--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -6,43 +6,57 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#d0d0d0">
+        android:layout_height="60dp"
+        android:background="#BAECF3">
+
 
         <ImageButton
             android:id="@+id/imageView44"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="65dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="homepage"
             android:scaleType="fitXY"
-            android:src="@drawable/house_outline"/>
+            android:src="@drawable/house_outline" />
 
         <ImageButton
-            android:id="@+id/imageView45"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="20dp"
+            android:id="@+id/search"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="search"
             android:scaleType="fitXY"
-            android:src="@drawable/search"/>
+            android:src="@drawable/search" />
 
         <ImageButton
-            android:id="@+id/imageView47"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="20dp"
+            android:id="@+id/Goto_order"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="orderlist"
             android:scaleType="fitXY"
-            android:src="@drawable/check_form"/>
+            android:src="@drawable/check_form" />
 
         <ImageButton
             android:id="@+id/imageView48"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="20dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_above="@id/imageView48"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
             android:scaleType="fitXY"
-            android:src="@drawable/user"/>
+            android:src="@drawable/user" />
 
 
     </LinearLayout>
+
 
 
     <ScrollView
@@ -51,7 +65,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="55dp">
+        android:layout_marginTop="60dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,14 +91,16 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="30dp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
-                android:gravity="center"
                 android:background="@drawable/radius"
-                android:padding="10dp"
-                android:orientation="horizontal">
+                android:gravity="center"
+                android:onClick="contact"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
 
                 <ImageView
@@ -102,6 +118,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
+                    android:textSize="20dp"
+                    android:textColor="#000000"
                     android:onClick="contact"
                     android:text="cycsponge" />
 
