--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@drawable/app_bg"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -19,11 +20,13 @@
     <EditText
         android:id="@+id/NameText22"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:ems="10"
         android:hint="請輸入帳號"
         android:inputType="text"
+        android:padding="10dp"
         android:maxLength="10"
+        android:background="@drawable/radius"
         android:singleLine="true"
         android:layout_marginTop="30dp"/>
 
@@ -31,11 +34,13 @@
     <EditText
         android:id="@+id/NameText"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:padding="10dp"
         android:ems="10"
         android:hint="請輸入密碼"
         android:maxLength="10"
         android:inputType="textPassword"
+        android:background="@drawable/radius"
         android:singleLine="true"
         android:layout_marginTop="30dp"/>
 
@@ -78,7 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="47dp"
         android:orientation="horizontal"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         >
 
         <Button
@@ -87,7 +92,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="register"
-            android:background="#00FFCC"
+            android:background="#B90D4150"
+            android:textColor="#ffffff"
             android:text="申請帳號" />
 
         <Button
@@ -95,8 +101,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#ffffff"
             android:onClick="fillOrder"
-            android:background="#00FFCC"
+            android:background="#B90D4150"
             android:text="忘記密碼" />
     </LinearLayout>
 
