--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,18 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/img_background">
+    android:background="@drawable/app_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-
-
         >
-
-
 
         <TextView
             android:id="@+id/textView1"
@@ -32,7 +28,9 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_marginTop="5dp"
+            android:background="@drawable/head"
             android:layout_width="278dp"
+            android:layout_margin="5dp"
             android:layout_height="269dp"/>
 
 
@@ -43,12 +41,13 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginTop="5dp"
+            android:background="@drawable/btn2"
             android:text="上傳照片"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="47dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -259,7 +258,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="5dp"
+            android:paddingTop="15dp"
             android:orientation="horizontal">
 
             <Button
@@ -268,15 +267,17 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="清除"
+                android:background="@drawable/radius"
                 />
 
 
             <Button
                 android:id="@+id/submit"
-                android:layout_below="@+id/helloWorld"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/helloWorld"
                 android:layout_weight="1"
+                android:background="@drawable/radius"
                 android:text="確認" />
 
         </LinearLayout>
