--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,11 +6,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#BAECF3">
 
+
+        <ImageButton
+            android:id="@+id/imageView44"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="65dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="homepage"
+            android:scaleType="fitXY"
+            android:src="@drawable/house_outline" />
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="search"
+            android:scaleType="fitXY"
+            android:src="@drawable/search" />
+
+        <ImageButton
+            android:id="@+id/Goto_order"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:onClick="orderlist"
+            android:scaleType="fitXY"
+            android:src="@drawable/check_form" />
+
+        <ImageButton
+            android:id="@+id/imageView48"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_above="@id/imageView48"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#BAECF3"
+            android:scaleType="fitXY"
+            android:src="@drawable/user" />
+
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
+        android:layout_marginTop="5dp"
         android:gravity="center">
 
         <TextView
@@ -32,16 +84,18 @@
             android:layout_width="190dp"
             android:layout_height="190dp"
             android:layout_marginLeft="15dp"
+            android:onClick="search_detail4"
             android:scaleType="fitXY"
-            android:src="@drawable/img5" />
+            android:src="@drawable/img_d1_3" />
 
         <ImageButton
             android:id="@+id/imageView6"
             android:layout_width="190dp"
             android:layout_height="190dp"
             android:layout_marginRight="5dp"
+            android:onClick="search_detail1"
             android:scaleType="fitXY"
-            android:src="@drawable/img3" />
+            android:src="@drawable/img_d2_7" />
 
 
     </LinearLayout>
@@ -54,18 +108,20 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="人像"
-            android:textSize="25dp"
             android:layout_weight="1"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:onClick="search_detail4"
+            android:text="人像"
+            android:textSize="25dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="婚紗"
-            android:textSize="25dp"
             android:layout_weight="1"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:onClick="search_detail1"
+            android:text="婚紗"
+            android:textSize="25dp" />
 
 
     </LinearLayout>
@@ -82,16 +138,18 @@
             android:layout_width="190dp"
             android:layout_height="190dp"
             android:layout_marginLeft="15dp"
+            android:onClick="search_detail2"
             android:scaleType="fitXY"
-            android:src="@drawable/img6" />
+            android:src="@drawable/img_d3_2" />
 
         <ImageButton
             android:id="@+id/imageView2"
             android:layout_width="190dp"
             android:layout_height="190dp"
             android:layout_marginRight="5dp"
+            android:onClick="search_detail3"
             android:scaleType="fitXY"
-            android:src="@drawable/img01" />
+            android:src="@drawable/img_d4_5" />
 
 
     </LinearLayout>
@@ -104,18 +162,20 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="風景"
-            android:textSize="25dp"
             android:layout_weight="1"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:onClick="search_detail2"
+            android:text="風景"
+            android:textSize="25dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="動物"
-            android:textSize="25dp"
             android:layout_weight="1"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:onClick="search_detail3"
+            android:text="動物"
+            android:textSize="25dp" />
 
 
     </LinearLayout>
