第21次commit 介面微微調

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:ems="10"
-        android:hint="請輸入帳號"
+        android:hint="　請輸入帳號"
+        android:drawableLeft="@drawable/ic_person_black_24dp"
         android:inputType="text"
         android:padding="10dp"
         android:maxLength="10"
@@ -37,7 +38,8 @@
         android:layout_height="50dp"
         android:padding="10dp"
         android:ems="10"
-        android:hint="請輸入密碼"
+        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
+        android:hint="　請輸入密碼"
         android:maxLength="10"
         android:inputType="textPassword"
         android:background="@drawable/radius"
