--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
 
 
     <EditText
-        android:id="@+id/NameText22"
+        android:id="@+id/Check_account"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:ems="10"
@@ -33,7 +33,7 @@
 
 
     <EditText
-        android:id="@+id/NameText"
+        android:id="@+id/Check_password"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:padding="10dp"
@@ -47,22 +47,19 @@
         android:layout_marginTop="30dp"/>
 
 
-
-
     <Button
         android:id="@+id/btn_Login"
         android:layout_width="220dp"
         android:layout_height="40dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/btn"
-        android:onClick="homepage"
         android:shadowColor="#000000"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
         android:text="登入"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:layout_marginTop="60dp"/>
+        android:textSize="20sp" />
 
 
     <Button
