--- a/app/src/main/res/layout/activity_view_order.xml
+++ b/app/src/main/res/layout/activity_view_order.xml
@@ -242,12 +242,14 @@
                     android:layout_marginRight="10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
+
                     <Button
                         android:id="@+id/clear"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/radius"
+                        android:onClick="orderlist"
                         android:text="回訂單" />
 
                 </LinearLayout>
