--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -67,6 +67,7 @@
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/edittext"
                 android:hint="請輸入帳號"
+                android:singleLine="true"
                 android:paddingLeft="10dp"
                 android:textSize="20sp" />
 
@@ -97,6 +98,7 @@
                 android:background="@drawable/edittext"
                 android:hint="請輸入密碼"
                 android:paddingLeft="10dp"
+                android:singleLine="true"
                 android:inputType="textPassword"
                 android:textSize="20sp" />
 
@@ -128,7 +130,8 @@
                 android:layout_marginLeft="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/edittext"
-                android:hint="請輸入姓名"/>
+                android:hint="請輸入姓名"
+                android:singleLine="true"/>
 
 
         </LinearLayout>
@@ -158,6 +161,7 @@
                 android:paddingLeft="10dp"
                 android:layout_marginLeft="10dp"
                 android:maxLength="10"
+                android:singleLine="true"
                 android:inputType="number"
                 android:background="@drawable/edittext"
                 android:hint="請輸入手機"/>
@@ -188,6 +192,7 @@
                 android:textSize="20sp"
                 android:paddingLeft="10dp"
                 android:layout_marginLeft="10dp"
+                android:singleLine="true"
                 android:maxLength="10"
                 android:background="@drawable/edittext"
                 android:hint="請輸入身分證"/>
@@ -217,6 +222,7 @@
                 android:layout_height="45dp"
                 android:textSize="20sp"
                 android:paddingLeft="10dp"
+                android:singleLine="true"
                 android:layout_marginLeft="10dp"
                 android:maxLength="30"
                 android:background="@drawable/edittext"
@@ -248,6 +254,7 @@
                 android:layout_width="250dp"
                 android:layout_height="45dp"
                 android:textSize="20sp"
+                android:singleLine="true"
                 android:layout_marginLeft="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/edittext"
