--- a/app/src/main/res/layout/activity_fill_project.xml
+++ b/app/src/main/res/layout/activity_fill_project.xml
@@ -26,7 +26,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="新增作品集資訊"
-                android:textColor="#000000"
                 android:textSize="30dp" />
         </LinearLayout>
 
@@ -50,12 +49,12 @@
                     android:layout_width="140dp"
                     android:layout_height="230dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/img_upload"
                     android:layout_margin="30dp"
                     android:layout_weight="1"
+                    android:background="@drawable/img_upload"
                     android:scaleType="fitXY" />
                 <Button
-                    android:id="@id/button2"
+                    android:id="@+id/uploadfile"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/radius"
@@ -79,29 +78,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="人像"
-                android:textSize="18dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"/>
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="風景"
-                android:textSize="18dp"
-
                 android:layout_gravity="center"
                 android:layout_weight="1"/>
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="婚紗"
-                android:textSize="18dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"/>
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="寵物"
-                android:textSize="18dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 />
@@ -126,16 +120,19 @@
                 android:textColor="#000000"
                 android:textSize="20dp" />
             <EditText
-                android:id="@+id/edittext1"
+                android:id="@+id/Text_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="請輸入標題"
-                android:inputType="number" />
+                android:maxLength="10"
+                android:singleLine="true"
+                android:inputType="text" />
 
         </LinearLayout>
 
         <EditText
+            android:id="@+id/Text_content"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_gravity="center"
@@ -161,12 +158,13 @@
                 android:textSize="20dp" />
 
             <EditText
-                android:id="@+id/priceText52"
-                android:layout_width="200dp"
+                android:id="@+id/Text_price"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="請輸入價格"
-                android:inputType="number" />
+                android:inputType="number"
+                android:maxLength="6"/>
 
             <Spinner
                 android:id="@+id/spinner"
@@ -195,16 +193,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/radius"
-                android:onClick="back"
                 android:text="回上頁" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/radius"
                 android:layout_weight="1"
-                android:text="上傳" />
+                android:background="@drawable/radius"
+                android:text="上傳"/>
+
 
         </LinearLayout>
 
